namespace HostelOps_API_Data.Models.Tenant;

public class BedType
{
    // Primary Key (PK)
    public int BedTypeId { get; set; }

    public string Name { get; set; } = string.Empty;

    public string Description { get; set; } = string.Empty;

    public bool IsActive { get; set; }

    public DateTime CreatedAt { get; set; }
}